<resources>
    <string name="app_name">Rock, Paper, Scissors-App</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="instrucation">Instruction: select rock, paper or scissors to play</string>
    <string name="statistics">Your all time statistics</string>
    <string name="results">Win:%d Draw:%d Lose: %d</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="win_message">%1$s</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="game_history">Your game history</string>
    <string name="title_activity_result_acitivity">ResultAcitivity</string>
    <string name="v_s">V.S</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="winner">Winner</string>
    <string name="vs">V.S.</string>
    <string name="timestap">timestap</string>
    <string name="result">Results</string>

</resources>
