<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleText2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textinstrucation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/whitegray"
        android:text="@string/instrucation"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="402dp"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinstrucation" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/whitegray"
        android:text="@string/statistics"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvStatstics"
        android:layout_width="410dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvWinLoseMsg"
        android:layout_width="406dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:text="@string/win_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatstics" />

    <ImageView
        android:id="@+id/ivPlayerChoice"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tvYou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinLoseMsg"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivComputerChoice"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="35dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinLoseMsg"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_marginTop="92dp"
        android:text="@string/v_s"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/ivComputerChoice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPlayerChoice"
        app:layout_constraintTop_toBottomOf="@+id/tvWinLoseMsg" />

    <TextView
        android:id="@+id/tvYou"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="16dp"
        android:text="@string/you"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerChoice" />

    <TextView
        android:id="@+id/tcComputer"
        android:layout_width="76dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:text="@string/computer"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerChoice" />

    <ImageView
        android:id="@+id/imageRock"
        android:layout_width="94dp"
        android:layout_height="92dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="52dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/imagePaper"
        android:layout_width="94dp"
        android:layout_height="92dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="52dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageScissors"
        app:layout_constraintStart_toEndOf="@+id/imageRock"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/imageScissors"
        android:layout_width="94dp"
        android:layout_height="92dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:background="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="406dp"
        android:layout_height="8dp"
        android:layout_marginTop="136dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>
